--- a/webfront/src/layouts/new.collection.slide/new.collection.slide.style.css
+++ b/webfront/src/layouts/new.collection.slide/new.collection.slide.style.css
@@ -31,7 +31,7 @@
     position: absolute;
     top: 0;
     left: 0;
-    z-index: 2;
+    z-index: 5;
     backgroundColor: #1787a1;
 }
 
@@ -44,7 +44,7 @@
     position: absolute;
     bottom: 0;
     right: 0;
-    z-index: 2;
+    z-index: 5;
     backgroundColor: #1787a1;
 }
 
@@ -53,7 +53,38 @@
     height: 150vw;
     background: white;
     border-radius: 150vw / 150vw;
-    z-index: 2;
+    z-index: 5;
     box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
 }
 
+
+.newCollectionH1 {
+    width: 100vw;
+    margin-top: 25vh;
+    transition: transform .4s ease-out;
+    position: absolute;
+    color: white;
+    font-weight: bold;
+    font-size: 64px;
+    letter-spacing: 2px;
+    text-align: center;
+    z-index: 3
+}
+
+.newCollectionH1Container {
+    text-align: center;
+    position: absolute;
+    width: 100vw;
+    z-index: 3;
+}
+
+.containerSpliterBottom {
+    width: 100vw;
+    height: 50vh;
+    transition: transform .4s ease-out;
+    position: absolute;
+    bottom: 0;
+    box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
+    z-index: 4;
+    background-color: #ebc6b4;
+}
